--- a/utils/barista/templates/component-ts/package.json
+++ b/utils/barista/templates/component-ts/package.json
@@ -23,6 +23,8 @@
   "license": "MIT",
   "description": "",
   "dependencies": {
-    "@coffee-shope/theme": "^1.0.1"
+    "@coffee-shope/theme": "^1.0.1",
+    "@emotion/core": "^10.0.7",
+    "@emotion/styled": "^10.0.7"
   }
 }
