--- a/utils/merge-event-handlers/tsconfig.json
+++ b/utils/merge-event-handlers/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
     "outDir": "./lib/",
-    "module": "commonjs",
+    "module": "es2015",
     "target": "es5",
     "lib": ["es6", "dom"],
     "sourceMap": true,
@@ -25,7 +25,8 @@
     "stories",
     "webpack",
     "jest",
-    "src/setupTests.ts"
+    "src/setupTests.ts",
+    "./lib"
   ],
   "types": [
     "typePatches"
