--- a/components/float/package.json
+++ b/components/float/package.json
@@ -4,7 +4,7 @@
   "main": "./lib/index.js",
   "scripts": {
     "test": "jest",
-    "build": "rm -rf ./lib && tsc",
+    "build": "barista build",
     "prepublishOnly": "yarn build",
     "postpublish": "rm -rf ./lib"
   },
@@ -15,6 +15,7 @@
     "react": "^16.8.1"
   },
   "devDependencies": {
+    "@coffee-shope/barista": "^1.1.3",
     "@types/jest": "^24.0.5",
     "@types/react": "^16.8.1",
     "typescript": "^3.3.1"
