--- a/components/float/tsconfig.json
+++ b/components/float/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
     "outDir": "./lib/",
-    "module": "commonjs",
+    "module": "es2015",
     "target": "es5",
     "lib": ["es6", "dom"],
     "sourceMap": true,
@@ -28,7 +28,7 @@
     "webpack",
     "jest",
     "src/setupTests.ts",
-    "lib"
+    "./lib"
   ],
   "types": [
     "typePatches"
