--- a/components/animator/package.json
+++ b/components/animator/package.json
@@ -4,7 +4,7 @@
   "main": "./lib/index.js",
   "scripts": {
     "test": "jest",
-    "build": "rm -rf ./lib && rollup -c",
+    "build": "barista build",
     "prepublishOnly": "yarn build"
   },
   "publishConfig": {
@@ -14,6 +14,7 @@
     "react": "^16.8.1"
   },
   "devDependencies": {
+    "@coffee-shope/barista": "^1.1.4",
     "@coffee-shope/button": "^1.0.27",
     "@types/jest": "^24.0.5",
     "@types/react": "^16.8.1",
