--- a/components/button/package.json
+++ b/components/button/package.json
@@ -4,7 +4,7 @@
   "main": "./lib/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "rm -rf ./lib && rollup -c",
+    "build": "barista build",
     "prepublishOnly": "yarn build"
   },
   "publishConfig": {
@@ -32,6 +32,7 @@
     "@babel/preset-env": "^7.3.4",
     "@babel/preset-react": "^7.0.0",
     "@babel/runtime-corejs2": "^7.3.4",
+    "@coffee-shope/barista": "^1.1.4",
     "postcss-modules": "^1.4.1",
     "rollup": "^1.3.2",
     "rollup-plugin-babel": "^4.3.2",
