--- a/components/field/package.json
+++ b/components/field/package.json
@@ -4,7 +4,7 @@
   "main": "./lib/index.js",
   "scripts": {
     "test": "jest",
-    "build": "rm -rf ./lib && rollup -c",
+    "build": "barista build",
     "prepublishOnly": "yarn build"
   },
   "publishConfig": {
@@ -24,6 +24,7 @@
     "@babel/preset-env": "^7.3.4",
     "@babel/preset-react": "^7.0.0",
     "@babel/runtime-corejs2": "^7.3.4",
+    "@coffee-shope/barista": "^1.1.4",
     "core-decorators": "^0.20.0",
     "node-sass": "^4.11.0",
     "rollup": "^1.3.2",
