--- a/utils/barista/package.json
+++ b/utils/barista/package.json
@@ -58,6 +58,7 @@
     "rollup-plugin-commonjs": "^9.2.1",
     "rollup-plugin-node-resolve": "^4.0.1",
     "rollup-plugin-postcss": "^2.0.3",
+    "rollup-plugin-svg": "^1.0.1",
     "rollup-plugin-terser": "^4.0.4",
     "rollup-plugin-typescript2": "^0.19.3",
     "shelljs": "^0.8.3",
