--- a/components/float/package.json
+++ b/components/float/package.json
@@ -25,6 +25,8 @@
   "description": "",
   "dependencies": {
     "@coffee-shope/ripple": "^1.0.27",
-    "@coffee-shope/theme": "^1.0.16"
+    "@coffee-shope/theme": "^1.0.19",
+    "@emotion/core": "^10.0.9",
+    "@emotion/styled": "^10.0.9"
   }
 }
