--- a/docs/package.json
+++ b/docs/package.json
@@ -40,6 +40,7 @@
     "@babel/plugin-syntax-dynamic-import": "^7.2.0",
     "@babel/preset-env": "^7.2.3",
     "@babel/preset-react": "^7.0.0",
+    "babel-plugin-react-docgen": "^2.0.2",
     "docz": "^1.0.0-rc.3",
     "docz-plugin-css": "^0.11.0",
     "docz-theme-default": "^1.0.0-rc.3",
