--- a/components/animator/package.json
+++ b/components/animator/package.json
@@ -18,7 +18,6 @@
     "@coffee-shope/button": "^1.0.27",
     "@types/jest": "^24.0.5",
     "@types/react": "^16.8.1",
-    "@types/react-transition-group": "^2.0.16",
     "rollup": "^1.4.0",
     "rollup-plugin-bundle-size": "^1.0.3",
     "rollup-plugin-commonjs": "^9.2.1",
@@ -28,11 +27,14 @@
     "rollup-plugin-typescript2": "^0.19.3",
     "typescript": "^3.3.1"
   },
+  "resolutions": {
+    "@types/react": "16.7.1"
+  },
   "author": "",
   "license": "MIT",
   "description": "",
   "dependencies": {
     "@coffee-shope/theme": "^1.0.1",
-    "react-transition-group": "^2.6.0"
+    "react-spring": "^8.0.18"
   }
 }
