--- a/utils/barista/templates/util-ts/package.json
+++ b/utils/barista/templates/util-ts/package.json
@@ -13,6 +13,7 @@
   },
   "devDependencies": {
     "@types/jest": "^24.0.5",
+    "jest": "^24.8.0",
     "typescript": "^3.3.1"
   },
   "author": "",
