--- a/utils/barista/templates/util-ts/tsconfig.json
+++ b/utils/barista/templates/util-ts/tsconfig.json
@@ -8,7 +8,7 @@
     "allowJs": false,
     "moduleResolution": "node",
     "declaration": true,
-    "rootDir": "./",
+    "rootDir": "./src",
     "noImplicitReturns": true,
     "noImplicitThis": true,
     "noImplicitAny": true,
@@ -28,7 +28,5 @@
     "src/setupTests.ts",
     "lib"
   ],
-  "types": [
-    "typePatches"
-  ]
+  "types": ["typePatches"]
 }
