--- a/components/dropdown/package.json
+++ b/components/dropdown/package.json
@@ -26,6 +26,7 @@
     "@coffee-shope/theme": "^1.0.1",
     "@emotion/core": "^10.0.7",
     "@emotion/styled": "^10.0.7",
+    "core-js": "^2.6.5",
     "downshift": "^3.2.6"
   }
 }
