--- a/package.json
+++ b/package.json
@@ -23,7 +23,6 @@
 		"@babel/preset-react": "^7.0.0",
 		"@babel/preset-typescript": "^7.3.3",
 		"@coffee-shope/barista": "^1.0.0",
-		"@storybook/react": "^4.1.11",
 		"babel-core": "^6.26.3",
 		"babel-loader": "^8.0.5",
 		"babel-preset-env": "^1.7.0",
@@ -41,9 +40,11 @@
 	],
 	"dependencies": {
 		"@babel/plugin-proposal-class-properties": "^7.3.3",
-		"@types/storybook__react": "^4.0.1",
+		"@storybook/react": "^5.1.10",
+		"@storybook/theming": "^5.1.10",
 		"@typescript-eslint/eslint-plugin": "^1.9.0",
 		"@typescript-eslint/parser": "^1.9.0",
+		"core-js": "^3.1.4",
 		"eslint": "^5.16.0",
 		"eslint-config-prettier": "^4.2.0",
 		"eslint-plugin-prettier": "^3.1.0",
