--- a/components/dropdown/tsconfig.json
+++ b/components/dropdown/tsconfig.json
@@ -10,7 +10,7 @@
       "dom"
     ],
     "sourceMap": true,
-    "allowJs": false,
+    "allowJs": true,
     "jsx": "react",
     "moduleResolution": "node",
     "rootDir": "./src",
