--- a/components/stack/package.json
+++ b/components/stack/package.json
@@ -1,12 +1,11 @@
 {
-  "name": "@coffee-shope/float",
-  "version": "1.0.17",
+  "name": "@coffee-shope/stack",
+  "version": "1.0.1",
   "main": "./lib/index.js",
   "scripts": {
     "test": "jest",
-    "build": "barista build",
-    "prepublishOnly": "yarn build",
-    "postpublish": "rm -rf ./lib"
+    "build": "barista build component",
+    "prepublishOnly": "yarn build"
   },
   "publishConfig": {
     "access": "public"
@@ -16,17 +15,17 @@
   },
   "devDependencies": {
     "@coffee-shope/barista": "^1.1.7",
+    "@storybook/addon-knobs": "^5.2.6",
     "@types/jest": "^24.0.5",
     "@types/react": "^16.8.1",
-    "typescript": "^3.3.1"
+    "node-sass": "^4.11.0"
   },
   "author": "",
   "license": "MIT",
   "description": "",
   "dependencies": {
-    "@coffee-shope/ripple": "^1.0.31",
-    "@coffee-shope/theme": "^1.0.19",
-    "@emotion/core": "^10.0.9",
-    "@emotion/styled": "^10.0.9"
+    "@coffee-shope/theme": "^1.0.1",
+    "@emotion/core": "^10.0.7",
+    "@emotion/styled": "^10.0.7"
   }
 }
