--- a/utils/barista/package.json
+++ b/utils/barista/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@coffee-shope/barista",
-  "version": "1.1.6",
+  "version": "1.1.7",
   "description": "A set of scripts for scaffolding and building coffee-shope components",
   "main": "index.js",
   "bin": {
@@ -60,9 +60,11 @@
     "rollup-plugin-postcss": "^2.0.3",
     "rollup-plugin-react-svg": "^3.0.3",
     "rollup-plugin-terser": "^4.0.4",
-    "rollup-plugin-typescript2": "^0.19.3",
     "shelljs": "^0.8.3",
-    "typescript": "^3.3.3333",
+    "typescript": "^3.7.4",
     "yargs": "^12.0.5"
+  },
+  "devDependencies": {
+    "rollup-plugin-typescript2": "^0.25.3"
   }
 }
