--- a/package.json
+++ b/package.json
@@ -15,13 +15,15 @@
 		"@babel/core": "^7.2.2",
 		"@babel/plugin-proposal-decorators": "^7.3.0",
 		"@babel/plugin-proposal-json-strings": "^7.2.0",
+		"@babel/plugin-proposal-nullish-coalescing-operator": "^7.7.4",
 		"@babel/plugin-proposal-object-rest-spread": "^7.3.2",
+		"@babel/plugin-proposal-optional-chaining": "^7.7.5",
 		"@babel/plugin-syntax-dynamic-import": "^7.2.0",
 		"@babel/plugin-syntax-import-meta": "^7.2.0",
 		"@babel/plugin-transform-runtime": "^7.2.0",
 		"@babel/preset-env": "^7.3.1",
 		"@babel/preset-react": "^7.0.0",
-		"@babel/preset-typescript": "^7.3.3",
+		"@babel/preset-typescript": "^7.7.7",
 		"@coffee-shope/barista": "^1.0.0",
 		"babel-core": "^6.26.3",
 		"babel-loader": "^8.0.5",
