--- a/utils/barista/package.json
+++ b/utils/barista/package.json
@@ -59,11 +59,9 @@
     "rollup-plugin-postcss": "^2.0.3",
     "rollup-plugin-react-svg": "^3.0.3",
     "rollup-plugin-terser": "^4.0.4",
+    "rollup-plugin-typescript2": "^0.25.3",
     "shelljs": "^0.8.3",
     "typescript": "^3.7.4",
     "yargs": "^12.0.5"
-  },
-  "devDependencies": {
-    "rollup-plugin-typescript2": "^0.25.3"
   }
 }
